Updates after the 1st Bioconductor review.